# camera-angles

./: .gitignore  CMakeLists.txt  build.bat  example.cpp  main.cpp  readme.md  run.bat
junk_examples/: example.cpp  test.cpp
release/: CMakeCache.txt  Makefile  camera_angles_mod.cbp  camera_hack.cbp  cmake_install.cmake
release/.cmake/api/v1/reply/: cache-v2-2aca4557f6708bd199fa.json  cache-v2-9e63eda77f32bf3cfcb0.json  cmakeFiles-v1-193c3525f594d4ed4be5.json  cmakeFiles-v1-94922eb2be643be5c3ee.json  codemodel-v2-3dcca5133ecc961f45ba.json  codemodel-v2-96f8a387e292c84a8299.json  index-2022-08-28T21-39-28-0848.json  index-2022-08-29T00-52-54-0338.json  index-2022-08-29T01-30-18-0446.json  target-camera_hackcamera_hack-Debug-0326f1b5e38e2cb139a6.json
resources_examples/: example.cpp  main.cpp
src/: main.cpp
src/constants/: constants.h
src/constants/wwe_19/: wwe_19_constants.h
src/controller/: controller.cpp  controller.h
src/hack_file/: camera_hack.cpp  camera_hack.h
src/hack_file/constants/: constants.h
src/hack_file/constants/wwe_19/: wwe_19_constants.h
src/hack_file/controller/: controller.cpp  controller.h
src/hack_file/helpers/: helpers.cpp
src/helpers/: helper.cpp  helpers.cpp
src/mod_file/cam_mod/: camera_hack.cpp  camera_hack.h
src/mod_file/constants/: constants.h
src/mod_file/controller/: controller.cpp  controller.h
src/mod_file/helpers/: helpers.cpp
src/mod_file/utils/: helpers.cpp
src/resources_examples/: CharBarV4.CT  charBarCamera_2K22.CT  charbarV3.CT  charbar_2k19v2.CT  charbar_camerav2.CT
