cmake_minimum_required(VERSION 3.13)
project(camera_hack)
set(CMAKE_CXX_STANDARD  14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libstdc++ -static-libgcc")
set(SOURCE_FILES camera_hack src/main.cpp src/hack_file/camera_hack.h src/hack_file/camera_hack.cpp src/hack_file/controller/controller.h)
add_executable(camera_hack${SOURCE_FILES} )