cmake_minimum_required(VERSION 3.13)
project(camera_hack)
set(CMAKE_CXX_STANDARD  14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libstdc++ -static-libgcc")
set(CMAKE_EXE_LINKER_FLAGS "-static")
set(SOURCE_FILES camera_hack src/main.cpp src/mod_file/cam_mod/camera_hack.h src/mod_file/cam_mod/camera_hack.cpp src/mod_file/controller/controller.h)
add_executable(camera_hack${SOURCE_FILES} src/mod_file/controller/controller.cpp)